--- a/front/public/index.html
+++ b/front/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <title>주차장</title>
   </head>
   <body>
